@@ -5,6 +5,10 @@ x.x.x
    headers)
  - [fix] memory allocation for [out, ref] parameters at server side is not
    intended
+ - [fix] creation of enums
+ - [fix] when using the -o option, target files were sometimes empty
+ - [fix] in C/C++ parser: recognize __builtin_va_list as type not ID
+ - [fix] defining C++ built-in types in C headers failed (wchar_t)
 
 3.2.1
  - [feature] new compiler option --require <string> that specifies the minimal
@@ -13,7 +17,7 @@ x.x.x
  - [fix] rcv_any and wait_any functions have different names on client and
    server side
  - [fix] marshalling of pointer types as parameter of ipc_call did not work
- - [fix] whitespace output when parsing fies using #pragma
+ - [fix] whitespace output when parsing files using #pragma
  - [fix] make unmarshal/marshal/wait_any functions protected in generated
    server classes (C++ backend)
 
